# dokly

./: .gitignore  main.py
rag/: README.md  main.py  pyproject.toml
rag/cli/: __init__.py  serve.py  vectordb.py
rag/generation/: ollama.py
rag/ingestion/: chunker.py  document_loader.py  vector_store.py
rag/utils/: config.py
src/cli/: build_index.py  serve.py
src/rag/: document_loader.py  ollama.py  vector_store.py
