[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.5",
    "docling>=2.63.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=0.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.3",
]
